# tedium

./: .gitignore  .gitmodules  99-tedium-arch.rules  99-tedium-debian.rules  Cargo.toml  LICENSE-BSD-3-Clause  LICENSE-MIT  README.md  pyproject.toml
applets/: tedium-fpga
breakout_xrt83l30/hw/: breakout_xrt83l30.kicad_pcb  breakout_xrt83l30.pro  breakout_xrt83l30.sch
framer/: Cargo.toml
framer/src/: main.rs
hardware/breakout_xrt83l30/: breakout_xrt83l30-cache.lib  breakout_xrt83l30.kicad_pcb  breakout_xrt83l30.pro  breakout_xrt83l30.sch
hardware/tedium_x8/: fp-lib-table  fpga_bank.kicad_sch  fpga_bank.sch  fpga_cfg.kicad_sch  fpga_cfg.sch  framer.kicad_sch  framer.sch  power.kicad_sch  power.sch  regulator.kicad_sch  regulator.sch  sym-lib-table  tedium_x8.kicad_pcb  tedium_x8.kicad_prl  tedium_x8.kicad_pro  tedium_x8.kicad_sch  tedium_x8.pro  tedium_x8.sch
hardware/tedium_x8_phy/: fp-lib-table  sym-lib-table  tedium_x8_phy.kicad_pcb  tedium_x8_phy.kicad_prl  tedium_x8_phy.kicad_pro  tedium_x8_phy.kicad_sch
tedium/: README.md  __init__.py  tedium-tool
tedium-soc/: Cargo.toml  README.md  memory.x
tedium-soc/.cargo/: config.toml
tedium-soc/src/: framer.rs  main.rs  peripheral.rs  test_points.rs  uart.rs  usb.rs
tedium-soc/tools/: usb_framer_interrupt_test.py  usb_host_command_test.py  usb_in_interrupt_test.py  usb_out_bulk_test.py
tedium/gateware/: common.py  descriptors_vendor.py  handler_set_interface.py  isochronous.py  status.py  tedium-fpga
tedium/tools/: channel_extract.py  data_check.py  iso_test.py
tedium/tools/tedium-tool/: Cargo.toml  README.md
tedium/tools/tedium-tool/src/: main.rs
tedium/tools/tedium-tool/src/codec/: mod.rs  ulaw.rs
tedium/tools/tedium-tool/src/detector/: dtmf.rs  goertzel.rs  mod.rs
tedium/tools/tedium-tool/src/framer/: audio.rs  default.rs  device.rs  dump.rs  interrupt.rs  mod.rs  register.rs  test.rs  usb.rs
tedium/tools/tedium-tool/src/generator/: dual_tone.rs  mod.rs
tests/hdl/: __init__.py  bit_timing.py  microprocessor.py  paged_fifo.py  rx_block.py  rx_fifo_to_usb.py  rx_framer_to_fifo.py  rx_physical.py  system_timing.py  tx_block.py  tx_fifo_to_framer.py  tx_physical.py  tx_usb_to_fifo.py  usb_interrupt.py  usb_iso_both.py  usb_iso_in.py
xrt86vx38-pac/: Cargo.toml  README.md
(+45 files in other folders)
